--- a/css/style.css
+++ b/css/style.css
@@ -138,9 +138,32 @@ flex-direction:row;
 flex-wrap:wrap;
 }
 .excellence li {
-  width: 50%;
-  list-style-type: none;
+width: 50%;
+list-style-type: none;
+background-repeat: no-repeat;
+padding: 12px 8px 10px 76px;
+position: relative;
+display: inline-block;
+box-sizing: border-box;
 }
+
+
+.about-us-ice-cream {
+background-image: url(../img/ice-cream.svg);
+}
+
+.about-us-eco {
+background-image: url(../img/eco.svg);
+}
+.about-us-cows {
+background-image: url(../img/cow.svg);
+}
+.about-us-thermometer {
+background-image: url(../img/thermometer.svg);
+}
+
+
+
 .blog-newsletter {
 display: flex;
 justify-content: space-between;
