--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ font-weight:700;
 font-size:16px;
 line-height:18px;
 color:#ffffff;
+justify-content: space-between;
 }
 .site-navigation,
 .user-navigation {
@@ -43,8 +44,9 @@ flex-wrap: wrap;
 width: 400px;
 }
 .user-navigation {
-display:flex;
+display:inline-flex;
 flex-wrap: wrap;
+
 max-width: 400px;
 }
 .user-navigation .login-link,
