--- a/css/style.css
+++ b/css/style.css
@@ -90,15 +90,13 @@ border-radius:20px;
 background-color: rgba(255,255,255,.2);
 margin-left: 4px;
 }
-.site-navigation {
-text-decoration: underline;
-}
+
 .site-navigation a,
 .user-navigation a {
-list-style: none;
 color:#ffffff;
 display: block;
 padding: 11px 15px;
+text-decoration: underline;
 }
 .breadcrumbs {
 display: flex;
@@ -114,17 +112,24 @@ justify-content: space-between;
 color:#323232;
 background-color:#ffffff;
 border-radius:20px;
+padding: -5px -5px;
+margin-left: 4px;
 }
 .login-link:hover::before {
 background-image: url(../img/entrance.svg);
 }
-.button-search:hover::before
+.button-search:hover::before {
 background-image: url(../img/loupe.svg);
-/*из фотошопа экспорт.белая иконка. как поменять цвет?*/
 }
 .cart-button:hover::before {
 background-image: url(../img/basket-red.svg);
 }
+
+
+
+
+
+
 .advantages {
 background-image: url(../img/waffles-background.svg);
 font-weight:400;
@@ -133,11 +138,17 @@ line-height:22px;
 color:#323232;
 background-color:#ffffff;
 border-radius:14px;
+margin-top: -10px;
 }
 .advantages .specification-shop {
 display: flex;
 font-size:24px;
 line-height:30px;
+margin-top: 8px;
+margin-bottom: 9px;
+padding-left: 20px;
+padding-top: 40px; 
+/*По макету 60px (margit-top: 0), но визуально 60 слишком много. чему верить?*/
 }
 .excellence {
 display:flex;
@@ -145,26 +156,37 @@ flex-direction:row;
 flex-wrap:wrap;
 }
 .excellence li {
-width: 50%;
+width: 48.9%;
 list-style-type: none;
 background-repeat: no-repeat;
-padding: 12px 8px 10px 76px;
+padding: 12px 8px 10px 60px;
 position: relative;
 display: inline-block;
 box-sizing: border-box;
+/*как отредактировать расстояния по макету? 50% или 48.9? если 48.9, то как раздвинуть столбцы?*/
+
 }
 .about-us-ice-cream {
 background-image: url(../img/ice-cream.svg);
+margin-left: -20px;
 }
 .about-us-eco {
 background-image: url(../img/eco.svg);
+margin-left: -20px;
 }
 .about-us-cows {
 background-image: url(../img/cow.svg);
+margin-left: -20px;
 }
 .about-us-thermometer {
 background-image: url(../img/thermometer.svg);
+margin-left: -20px;
+
 }
+/*не уверена, что правильно задан margin. расстояние от края до иконки д.б.20px*/
+
+
+
 .blog-newsletter {
 display: flex;
 justify-content: space-between;
@@ -178,6 +200,7 @@ line-height:22px;
 border-radius:15px;
 border-width: 1px;
 border-style: solid;
+padding-left: 20px;
 }
 .blog a{
 color:#323232;
@@ -197,8 +220,10 @@ border-color: lightblue;
 border-image: url(https://htmlacademy-htmlcss.github.io/924839-gllacy/5/img/bg-post.svg);
 border-image-repeat: stretch stretch;
 border-image-slice: 15;
-border-image-width: 6px;
+border-image-width: 5px;
 color: #5a5a5a;
+/*не получается скруглить полосатую подложку. cлиплись блоки новости и блог*/
+
 }
 .newsletter > .newsletter-p, .mail-form  {
 padding-left: 20px;
@@ -223,38 +248,75 @@ font-weight:400;
 font-size:14px;
 line-height:20px;
 }
+
+.feedback-form {
+ background-color:#ec583c;
+ color: #ffffff;
+ padding: 13px 30px;
+ border-radius: 25px;
+}
+
+}
 .store-address a {
 margin-left: 50px;
 color:#fefefe;
 background-color:#ef5f3f;
 border-radius: 20px;
 }
-.item-cards-row {
+
+
+
+.item-cards-table {
 display:inline-flex;
-}
-.icecream-card{
-display: block;
-width: 290px;
-height:330px;
-padding: 7px 15px;
-position: relative;
-margin-bottom: 40px;
+flex-wrap: wrap;
+padding-left: 2%;
+padding-right: 2%;
 text-align: center;
 }
-.icecream-card:hover { /*как разместить сверху? сейчас ховер сдвигает вниз нижние карточки*/
-width: 290px;
+
+.icecream-card{
+width: 22%;
 height:400px;
 position: relative;
-background-color: #9bafa3;
-border-radius: 5px;
-padding: 7px 15px;
+margin-bottom: 10px; /*расстояние от нижней точки наим.морож.до нижерасполож. картинки д.б.40, а полкчается сильно больше*/
+margin-right: 1.3%;
 
+padding-left: 8px;
+padding-right: 8px;
+padding-top:7px;
+border-radius: 5px;
 }
+
+.icecream-card:hover { 
+background-color: #9bafa3;
+}
+
+
+.button-preview {
+position: relative;
+top: -130px;
+visibility: hidden;
+}
+
+.icecream-card:hover .button-preview {
+visibility: visible;
+background-color: #f16642;
+border-radius: 30px;
+padding: 13px;
+color:#fefefe;
+margin-bottom: 22px;
+}
+
 
 .card-name {
 display: flex;
 text-decoration: underline;
 position: relative;
+text-align: center;
+/*если ширину не задавать, то наим.первого товара в три строчки получается +  Расстояние до кнопки съезжает.
+ С заданной шириной не получается выставить по центру карточки*/
+
+
 top: -150px;
 }
 
@@ -379,10 +441,7 @@ vertical-align:middle;
 color:#fefefe;
 border-radius: 20px;
 }*/
-.item-cards-row {
-display: flex;
-justify-content: row;
-}
+
 .catalog-dropdown-items,
 .basket-form,
 .contact-form,
