--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,6 @@ border-radius:20px;
 background-color: rgba(255,255,255,.2);
 margin-left: 4px;
 }
-
 .site-navigation a,
 .user-navigation a {
 color:#ffffff;
@@ -124,12 +123,6 @@ background-image: url(../img/loupe.svg);
 .cart-button:hover::before {
 background-image: url(../img/basket-red.svg);
 }
-
-
-
-
-
-
 .advantages {
 background-image: url(../img/waffles-background.svg);
 font-weight:400;
@@ -144,10 +137,10 @@ margin-top: -10px;
 display: flex;
 font-size:24px;
 line-height:30px;
-margin-top: 8px;
+margin-top: 0px;
 margin-bottom: 9px;
 padding-left: 20px;
-padding-top: 40px; 
+padding-top: 40px;
 /*По макету 60px (margit-top: 0), но визуально 60 слишком много. чему верить?*/
 }
 .excellence {
@@ -164,7 +157,6 @@ position: relative;
 display: inline-block;
 box-sizing: border-box;
 /*как отредактировать расстояния по макету? 50% или 48.9? если 48.9, то как раздвинуть столбцы?*/
-
 }
 .about-us-ice-cream {
 background-image: url(../img/ice-cream.svg);
@@ -181,12 +173,8 @@ margin-left: -20px;
 .about-us-thermometer {
 background-image: url(../img/thermometer.svg);
 margin-left: -20px;
-
 }
 /*не уверена, что правильно задан margin. расстояние от края до иконки д.б.20px*/
-
-
-
 .blog-newsletter {
 display: flex;
 justify-content: space-between;
@@ -201,6 +189,7 @@ border-radius:15px;
 border-width: 1px;
 border-style: solid;
 padding-left: 20px;
+box-sizing: border-box;
 }
 .blog a{
 color:#323232;
@@ -212,22 +201,17 @@ text-decoration: underline;
 .newsletter {
 width: 48.8%;
 height: 200px;
-background-color: #f8f7f4;;
-border-radius: 10px;
-border-width: 5px; /*при подстановке др.значений толщина рамки не меняется, потому что это подложка? как уеньшить толщину тогда?*/
-border-style: solid;
-border-color: lightblue;
-border-image: url(https://htmlacademy-htmlcss.github.io/924839-gllacy/5/img/bg-post.svg);
-border-image-repeat: stretch stretch;
-border-image-slice: 15;
-border-image-width: 5px;
+background-color: #f8f7f4;
+border-radius: 15px;
 color: #5a5a5a;
-/*не получается скруглить полосатую подложку. cлиплись блоки новости и блог*/
+background-image: url(https://htmlacademy-htmlcss.github.io/924839-gllacy/5/img/bg-post.svg);
 
 }
-.newsletter > .newsletter-p, .mail-form  {
-padding-left: 20px;
-padding-top: 10px;
+.newsletter > .mail-form  {
+margin: 6px; 
+padding: 10px 10px 50px 20px;
+background-color: #f8f7f4;
+border-radius: 15px;
 }
 .map {
 margin: 0;}
@@ -248,14 +232,12 @@ font-weight:400;
 font-size:14px;
 line-height:20px;
 }
-
 .feedback-form {
- background-color:#ec583c;
- color: #ffffff;
- padding: 13px 30px;
- border-radius: 25px;
+background-color:#ec583c;
+color: #ffffff;
+padding: 13px 30px;
+border-radius: 25px;
 }
-
 }
 .store-address a {
 margin-left: 50px;
@@ -263,9 +245,6 @@ color:#fefefe;
 background-color:#ef5f3f;
 border-radius: 20px;
 }
-
-
-
 .item-cards-table {
 display:inline-flex;
 flex-wrap: wrap;
@@ -273,73 +252,54 @@ padding-left: 2%;
 padding-right: 2%;
 text-align: center;
 }
-
 .icecream-card{
-width: 22%;
-height:400px;
+width: 23%;
 position: relative;
-margin-bottom: 10px; /*расстояние от нижней точки наим.морож.до нижерасполож. картинки д.б.40, а полкчается сильно больше*/
-margin-right: 1.3%;
-
+margin-bottom: 10px; /*расстояние от нижней точки наим.морож.до нижерасполож. картинки д.б.40, а получается сильно больше*/
 padding-left: 8px;
 padding-right: 8px;
 padding-top:7px;
 border-radius: 5px;
+border:1px solid red;
 }
-
-.icecream-card:hover { 
+.icecream-card:hover {
 background-color: #9bafa3;
 }
-
-
 .button-preview {
-position: relative;
-top: -130px;
-visibility: hidden;
-}
-
-.icecream-card:hover .button-preview {
-visibility: visible;
 background-color: #f16642;
 border-radius: 30px;
 padding: 13px;
 color:#fefefe;
-margin-bottom: 22px;
+position: relative;
+top: 20px;
+visibility: hidden;
 }
-
-
+.icecream-card:hover .button-preview {
+visibility: visible;
+z-index: 1
+}
 .card-name {
 display: flex;
 text-decoration: underline;
 position: relative;
 text-align: center;
+margin: 0px;
 /*если ширину не задавать, то наим.первого товара в три строчки получается +  Расстояние до кнопки съезжает.
- С заданной шириной не получается выставить по центру карточки*/
-
-
-top: -150px;
+С заданной шириной не получается выставить по центру карточки*/
 }
-
 .card-price {
 display: flex;
 position: relative;
-top: -120px;
+margin-top: -70px;
 text-align:left;
 font-size:45px;
 font-weight: bold;
 }
-
 .icecream-card img {
 width: 100%;
 margin: 0px;
 border-radius: 60%;
 }
-
-
-
-
-
-
 .main-footer {
 display:flex;
 justify-content: space-between;
@@ -432,7 +392,6 @@ border-radius: 20px;
 .htmlacademy-button:hover {
 background-color:#f07962;
 border-radius: 20px;
-
 }
 /*.button { это не нужно в принципе?
 font:inherit;
@@ -441,7 +400,6 @@ vertical-align:middle;
 color:#fefefe;
 border-radius: 20px;
 }*/
-
 .catalog-dropdown-items,
 .basket-form,
 .contact-form,
