--- a/css/style.css
+++ b/css/style.css
@@ -16,148 +16,136 @@ width: 1146px;
 margin: 0 auto;
 padding:0 10px;
 }
-
-
-
-
-
-
-
-
-body {
-  font-size: 18px;
-  line-height: 1.;
-  font-family: Roboto, "Arial", sans-serif;
+.main-slider {
+font-size: 18px;
+line-height: 1.2;
+font-family: Roboto, "Arial", sans-serif;
 }
-
 .visually-hidden {
-  position: absolute;
-
-  width: 1px;
-  height: 1px;
-
-  clip: rect(0, 0, 0, 0);
+position: absolute;
+width: 1px;
+height: 1px;
+clip: rect(0, 0, 0, 0);
 }
-
 .site-wrapper {
-  min-width: 940px;
-  background-color: #849d8f;
-  background-image: url("img/slider-item1.png");
-  background-repeat: no-repeat;
-  background-position: top center;
+min-width: 940px;
+background-color: #849d8f;
+background-image: url(../img/slider-item1.png);
+background-repeat: no-repeat;
+background-position: top center;
+
+transition: background-image 0.5s ease, background-color 0.5s ease;
+
 }
-
-
-.main-header {
-  /* Для демонстрации */
-  height: 100px;
-
-  background-color: rgba(0, 0, 0, 0.4);
+.site-wrapper::before,
+.site-wrapper::after {
+content: "";
+visibility: hidden;
 }
-
-.slider {
-  position: relative;
-  padding-top: 321px;
-  text-align: center;
-  color: #ffffff;
+.site-wrapper::before {
+background-image: url(../img/slider-item2.png);
 }
+.site-wrapper::after {
+background-image: url(../img/slider-item3.png);
+}
+.container {
+width: 900px;
+margin: 0 auto;
+padding: 0 20px;
+}
+.slider-number {
+position: relative;
 
+padding-top: 321px;
+
+text-align: center;
+color: #ffffff;
+}
 .slider-list {
-  margin: 0;
-  padding: 0;
-  
-  list-style: none;
-}
+margin: 0;
+padding: 0;
 
+list-style: none;
+}
 .slide {
-  display: none;
+display: none;
 }
-
 .slide-title {
-  width: 700px;
-  margin: 0 auto;
-  margin-bottom: 27px;
-  
-  font-size: 60px;
-  line-height: 60px;
-  font-weight: 800;
+width: 700px;
+margin: 0 auto;
+margin-bottom: 27px;
+
+font-size: 60px;
+line-height: 60px;
+font-weight: 800;
 }
-
-.button {
-  display: inline-block;
-  padding: 12px 44px;
-
-  font-weight: 600;
-  font-size: 31px;
-  line-height: 41px;
-  text-align: center;
-  color: #ffffff;
-  vertical-align: top;
-  text-decoration: none;
-  text-shadow: 0 2px 5px rgba(160, 32, 11, 0.76);
-
-  background: #f26843;
-  background: linear-gradient(to bottom, #f26843 0%, #e74a35 100%);
-  border-radius: 50px;
-  box-shadow: 0 2px 2px rgba(172, 16, 0, 0.64);
-  border: none;
-
-  cursor: pointer;
+.slide-button {
+display: inline-block;
+padding: 12px 44px;
+font-weight: 600;
+font-size: 31px;
+line-height: 41px;
+text-align: center;
+color: #ffffff;
+vertical-align: top;
+text-decoration: none;
+text-shadow: 0 2px 5px rgba(160, 32, 11, 0.76);
+background: #f26843;
+background: linear-gradient(to bottom, #f26843 0%, #e74a35 100%);
+border-radius: 50px;
+box-shadow: 0 2px 2px rgba(172, 16, 0, 0.64);
+border: none;
+cursor: pointer;
 }
-
 .button:hover {
-  background: linear-gradient(to bottom, #f58669 0%, #ec6f5e 100%);
-  box-shadow: 0 2px 2px rgba(172, 16, 0, 1);
+background: linear-gradient(to bottom, #f58669 0%, #ec6f5e 100%);
+box-shadow: 0 2px 2px rgba(172, 16, 0, 1);
 }
-
 .button:active {
-  background: linear-gradient(to bottom, #d84732 0%, #e1613e 100%);
-  box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
+background: linear-gradient(to bottom, #d84732 0%, #e1613e 100%);
+box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
 }
-
 .slider-controls {
-  position: absolute;
-  bottom: 63px;
-  left: 0;
-  z-index: 20;
-  
-  font-size: 0;
-}
+position: absolute;
+bottom: 63px;
+left: 0;
+z-index: 20;
 
+font-size: 0;
+}
 .slider-controls label {
-  display: inline-block;
-  width: 17px;
-  height: 17px;
-  margin-right: 8px;
-
-  vertical-align: top;
-
-  background-color: transparent;
-  border: 2px solid #ffffff;
-  border-radius: 50%;
-  cursor: pointer;
+display: inline-block;
+width: 17px;
+height: 17px;
+margin-right: 8px;
+vertical-align: top;
+background-color: transparent;
+border: 2px solid #ffffff;
+border-radius: 50%;
+cursor: pointer;
 }
-
+#product-1:checked ~ .site-wrapper {
+background-color: #849d8f;
+background-image: url(../img/slider-item1.png);
+}
+#product-2:checked ~ .site-wrapper {
+background-color: #8996a6;
+background-image: url(../img/slider-item2.png);
+}
+#product-3:checked ~ .site-wrapper {
+background-color: #9d8b84;
+background-image: url(../img/slider-item3.png);
+}
 #product-1:checked ~ .site-wrapper #slide1,
 #product-2:checked ~ .site-wrapper #slide2,
 #product-3:checked ~ .site-wrapper #slide3 {
-  display: block;
+display: block;
 }
-
 #product-1:checked ~ .site-wrapper label[for="product-1"],
 #product-2:checked ~ .site-wrapper label[for="product-2"],
 #product-3:checked ~ .site-wrapper label[for="product-3"] {
-  background-color: #ffffff;
+background-color: #ffffff;
 }
-
-
-
-
-
-
-
-
-
 .main-navigation {
 display:flex;
 flex-wrap:wrap;
@@ -176,7 +164,7 @@ padding: 0;
 .site-navigation{
 display:flex;
 flex-wrap: wrap;
-width: 400px;
+
 margin-right: auto;
 }
 .user-navigation {
@@ -226,10 +214,8 @@ border-radius:20px;
 background-color: rgba(255,255,255,.2);
 margin-left: 4px;
 }
-
-
 .site-navigation a,
-.user-navigation a {
+.user-navigation
 color:#ffffff;
 display: block;
 padding: 11px 15px;
@@ -240,17 +226,35 @@ display: flex;
 width: 250px;
 justify-content: space-between;
 }
-.site-navigation a:focus,
+
+
+
+.catalog-main-categories:focus,
+.catalog-main-categories:hover {
+color:#323232;
+background-color:#ffffff;
+padding: 7px;
+border-radius:15px;
+}
+
+.catalog-main-categories--active{
+background-color:#d07058;
+color:#323232;
+border-radius:15px;
+padding: 7px;
+}
+
+
+
 .user-navigation a:focus,
 .breadcrumbs a:focus,
-.site-navigation a:hover,
 .user-navigation a:hover,
 .breadcrumbs a:hover {
 color:#323232;
 background-color:#ffffff;
-border-radius:20px;
-padding: -5px -5px;
-margin-left: 4px;
+border-radius:15px;
+padding: 7px;
+
 }
 .login-link:hover::before {
 background-image: url(../img/entrance.svg);
@@ -261,99 +265,96 @@ background-image: url(../img/loupe.svg);
 .cart-button:hover::before {
 background-image: url(../img/basket-red.svg);
 }
-
-
-
-/*.price-controls {
-  font-size: 0;
-}
-
-.price-controls label {
-  display: inline-block;
-  width: 50%;
-  font-size: 14px;
-  text-transform: uppercase;
-}
-
-.price-controls input {
-  width: 55px;
-  margin-left: 5px;
-  font-family: Roboto, Arial, sans-serif;
-  font-size: 14px;
-  text-align: center;
-  color: #ffffff;
-  background: none;
-  border:none;
-}
-
-.max-price {
-  text-align: right;
-}*/
-
-
-
-
-
 .filter-item {
-  margin: 0;
-  padding: 0;
-  
-  border: none;
-}
+margin: 0;
+padding: 0;
 
+border: none;
+}
 .range-filter {
-  width: 215px;
-  margin-top: 7px;
+width: 215px;
+margin-top: 7px;
 }
-
 .filter-item legend {
-  font-size: 14px;
-  line-height: 16px;
-  text-transform: inherit;
+font-size: 14px;
+line-height: 16px;
+text-transform: inherit;
 }
-
 .range-controls {
-  position: relative;
-  height: 20px;
-  padding-top: 16px;
-  padding-right: 20px;
-  padding-left: 20px;
-  background-color:#a8bab0;
-  border-radius: 14px;
+position: relative;
+height: 20px;
+padding-top: 16px;
+padding-right: 20px;
+padding-left: 20px;
+background-color:#a8bab0;
+border-radius: 14px;
 }
 .range-controls .scale {
-  height: 4px;
-  background:#d1dad3;
+height: 4px;
+background:#d1dad3;
 }
 .range-controls .bar {
-  width: 70%;
-  height: 4px;
-  background: #ffffff;
+width: 70%;
+height: 4px;
+background: #ffffff;
 }
 .range-controls .toggle {
-  position: absolute;
-  top: 9px;
-  left: 0;
-  width: 4px;
-  height: 4px;
-  padding: 0;
-  border: 8px solid #ffffff;
-  background-color: #ababab;
-  border-radius: 50%;
-  cursor: pointer;
+position: absolute;
+top: 9px;
+left: 0;
+width: 4px;
+height: 4px;
+padding: 0;
+border: 8px solid #ffffff;
+background-color: #ababab;
+border-radius: 50%;
+cursor: pointer;
 }
 .range-controls .toggle-max {
-  left: 142px;
+left: 142px;
 }
 .range-controls .toggle-min {
-  left: 44px;
+left: 44px;
 }
+.promo-cards-items {
+display: flex;
+justify-content:space-between;
+float:none;
+margin-bottom: 40px;
+}
+.promo-cards-raspberries,
+.promo-cards-chocolate {
+display: flex;
+box-sizing: border-box;
+margin: 0 0 20px;
+background-position: center center;
+border-radius: 15px;
+padding: 15px 20px 23px;
+width: 48.9%;
+background-repeat: no-repeat;
+}
+.promo-cards-raspberries {
+background-image: url(../img//raspberries.png);
+}
+.promo-cards-chocolate {
+background-image: url(../img//chocolate.png);
+}
+.promo-button { 
+display:inline-block;
+vertical-align: top;
+position: relative;
+left: 200px;
+padding: 8px 23px 12px;
+border-radius:25px;
+text-decoration:none;
+box-shadow: 0 2px 2px rgba(172,16,0,.64);
+text-shadow: 0 2px 5px rgba(160,32,11,.76);
+text-align: center;
+color: #ffffff;
+background: #f26843;
 
 
-
-
-
-
+}
 .advantages {
 background-image: url(../img/waffles-background.svg);
 font-weight:400;
@@ -436,16 +437,16 @@ background-color: #f8f7f4;
 border-radius: 15px;
 color: #5a5a5a;
 background-image: url(https://htmlacademy-htmlcss.github.io/924839-gllacy/5/img/bg-post.svg);
-
 }
 .newsletter > .mail-form  {
-margin: 6px; 
+margin: 6px;
 padding: 10px 10px 50px 20px;
 background-color: #f8f7f4;
 border-radius: 15px;
 }
 .map {
-margin: 0;}
+margin: 0;
+}
 .container-address {
 display: flex;
 justify-content: flex-end;
@@ -468,7 +469,6 @@ background-color:#ec583c;
 color: #ffffff;
 padding: 13px 30px;
 border-radius: 25px;
-}
 }
 .store-address a {
 margin-left: 50px;
@@ -515,7 +515,6 @@ text-decoration: underline;
 position: relative;
 text-align: center;
 margin-top: -40px;
-
 }
 .card-price {
 display: flex;
@@ -530,18 +529,12 @@ width: 100%;
 margin: 0px;
 border-radius: 60%;
 }
-
 .filter-form-fat {
 list-style-type: none;
 }
-
-
 .filter-form-fillers {
 list-style-type: none;
 }
-
-
-
 .main-footer {
 display:flex;
 justify-content: space-between;
@@ -649,6 +642,48 @@ border-radius: 20px;
 .login-form {
 display: none;
 }
+.catalog-dropdown-items {
+margin: 0;
+margin-bottom: 20px;
+padding: 0;
+background-color: #ffffff;
+border-radius: 4px;
+position: relative;
+left:-20px;
+
+}
+.catalog-dropdown-items li{
+list-style-type: none;
+padding: 6px 20px;
+margin: 0;
+color: #323232;
+
+}
+
+.catalog-dropdown-items li:hover,
+.catalog-dropdown-items li:focus  {
+background-color:#fbded7;
+}
+
+.catalog-dropdown-items li:active {
+background-color:#f6b5a5;
+}
+
+.catalog-categories a  {
+font-size: 14px;
+line-height: 16px;
+font-weight: 400;
+text-decoration: none;
+color: #000000;
+cursor: pointer;
+}
+
+.catalog-categories:first-child a{
+font-weight: 700;
+}
+
+
+
 img {
 max-width: 100%;
 height: auto;
