--- a/css/style.css
+++ b/css/style.css
@@ -159,24 +159,30 @@ justify-content: space-between;
 list-style: none;
 margin: 0;
 padding: 0;
+margin-left: 11px;
+margin-top: 10px;
 }
 .site-navigation{
 display:flex;
 flex-wrap: wrap;
 margin-right: auto;
-margin-left: 11px;
-margin-top: 10px;
 }
 .user-navigation {
 display:inline-flex;
 flex-wrap: wrap;
 max-width: 400px;
+font-size: 14px;
+line-height: 16px;
 }
+
+.user-navigation li {
+  margin-left: 10px;
+}
+
 .user-navigation .login-link,
 .user-navigation .button-search,
 .user-navigation .cart-button {
 position: relative;
-padding-left: 30px;
 }
 .button-search::before,
 .login-link::before,
@@ -190,41 +196,42 @@ background-position: 0 0;
 }
 .button-search::before{
 background-image: url(../img/loupe-white.svg);
-top: 12px;
-left: 14px;
+top: 9px;
+left: 9px;
 }
 .login-link::before {
 background-image: url(../img/entrance-white.svg);
-top: 11px;
-left: 6px;
+top: 7px;
+left: 16px;
 }
 .cart-button::before {
 background-image: url(../img/basket.svg);
-top: 10px;
-left: 6px;
+top: 7px;
+left: 16px;
 }
-.button-search {
-height: 18px;
-border-radius:50%;
-background-color: rgba(255,255,255,.2)
-}
+
 .cart-button,
 .login-link {
 border-radius:20px;
 background-color: rgba(255,255,255,.2);
-margin-left: 4px;
 }
-.site-navigation-items,
-.user-navigation a{
+.site-navigation-items{
 color:#ffffff;
 display: inline-block;
 text-decoration: underline;
+padding: 10px 14px;
 }
-
-.site-navigation-items{
-  padding: 10px 14px;
+.user-navigation-item{
+color:#ffffff;
+display: inline-block;
+text-decoration: underline;
+padding: 9px 14px 9px 45px;
 }
-
+.button-search {
+border-radius:50%;
+background-color: rgba(255,255,255,.2);
+padding: 17px;
+}
 .site-navigation-items:focus,
 .site-navigation-items:hover {
 color:#323232;
@@ -245,21 +252,18 @@ width: 250px;
 justify-content: space-between;
 }
 
-.user-navigation a:focus,
+.user-navigation-item:focus,
 .breadcrumbs a:focus,
-.user-navigation a:hover,
+.user-navigation-item:hover,
 .breadcrumbs a:hover {
 color:#323232;
 background-color:#ffffff;
-border-radius:15px;
-padding: 7px;
-
 }
 .login-link:hover::before {
 background-image: url(../img/entrance.svg);
 }
 .button-search:hover::before {
-background-image: url(../img/loupe.svg);
+background-image: url(../img/loupe-black.svg);
 }
 .cart-button:hover::before {
 background-image: url(../img/basket-red.svg);
