--- a/css/style.css
+++ b/css/style.css
@@ -161,9 +161,9 @@ a {
   font-weight: 700;
   font-size: 16px;
   line-height: 18px;
-  color: #ffffff;
   justify-content: space-between;
   position: relative;
+  color: #ffffff;
 }
 
 .site-navigation,
@@ -258,37 +258,37 @@ a {
 }
 
 .site-navigation-items {
-  color: #ffffff;
   display: inline-block;
   text-decoration: underline;
   padding: 10px 14px;
+  color: #ffffff;
 }
 
 .user-navigation-item {
-  color: #ffffff;
   display: inline-block;
   text-decoration: underline;
   padding: 9px 14px 9px 45px;
+  color: #ffffff;
 }
 
 .button-search {
+  padding: 17px;
   border-radius: 50%;
   background-color: rgba(255, 255, 255, .2);
-  padding: 17px;
 }
 
 .site-navigation-items:focus,
 .site-navigation-items:hover {
+  border-radius: 15px;
   color: #323232;
   background-color: #ffffff;
-  border-radius: 15px;
 }
 
 .site-navigation-items--active {
+  padding: 7px;
+  border-radius: 15px;
   background-color: #d07058;
   color: #323232;
-  border-radius: 15px;
-  padding: 7px;
 }
 
 .breadcrumbs {
@@ -304,11 +304,11 @@ a {
 
 .filter-form-item {
   display: inline-block;
-  vertical-align: top;
-  border: none;
   font-size: 16px;
   line-height: 18px;
   font-weight: 500;
+  vertical-align: top;
+  border: none;
   color: #ffffff;
 }
 
@@ -320,10 +320,31 @@ a {
 .filter-form-sort,
 .filter-form-fat,
 .filter-form-fillers {
-  border-radius: 15px;
-  background-color: #aabcb2;
   padding: 0;
-  margin: 0 auto;
+  margin: 0;
+  border-radius: 17px;
+  background-color: #aabcb2;
+}
+
+.filter-form-sort {
+  height: 36px;
+  padding: 0 25px 0 13px;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  text-align: center;
+  font-size: 16px;
+  line-height: 18px;
+  font-weight: 500;
+}
+
+.filter-form-sort-icon {
+  position: absolute;
+  top: 50%;
+  right: 11px;
+  background-position: -158px -101px;
+  width: 9px;
+  height: 5px;
 }
 
 .filter-form-fat li,
@@ -340,9 +361,9 @@ a {
 }
 
 .filter-form-botton {
-  border-radius: 15px;
   padding: 7px 24px 7px 25px;
   margin: 23px 0 0;
+  border-radius: 15px;
   border: 2px solid #fff;
   cursor: pointer;
 }
@@ -351,8 +372,8 @@ a {
 .breadcrumbs a:focus,
 .user-navigation-item:hover,
 .breadcrumbs a:hover {
-  color: #323232;
   background-color: #ffffff;
+  color: #323232;
 }
 
 .login-link:hover::before {
@@ -391,8 +412,8 @@ a {
   padding-top: 16px;
   padding-right: 20px;
   padding-left: 20px;
-  background-color: #a8bab0;
   border-radius: 14px;
+  background-color: #a8bab0;
 }
 
 .range-controls .scale {
@@ -413,9 +434,9 @@ a {
   width: 4px;
   height: 4px;
   padding: 0;
+  border-radius: 50%;
   border: 8px solid #ffffff;
   background-color: #ababab;
-  border-radius: 50%;
   cursor: pointer;
 }
 
@@ -428,9 +449,9 @@ a {
 }
 
 .container index-content {
+  width: 1160px;
   margin: 0 auto;
   padding: 0 2.3%;
-  width: 1160px;
 }
 
 .baners {
@@ -451,14 +472,14 @@ a {
 .promo-cards-raspberries,
 .promo-cards-chocolate {
   display: flex;
+  width: 48.9%;
   box-sizing: border-box;
   position: relative;
   margin: 0 0 20px;
   background-position: center center;
+  background-repeat: no-repeat;
   border-radius: 15px;
   padding: 10px 20px 60px;
-  width: 48.9%;
-  background-repeat: no-repeat;
 }
 
 .promo-cards-raspberries {
@@ -505,10 +526,10 @@ a {
   font-weight: 400;
   font-size: 16px;
   line-height: 22px;
+  margin-top: -10px;
+  border-radius: 14px;
   color: #323232;
   background-color: #ffffff;
-  border-radius: 14px;
-  margin-top: -10px;
 }
 
 .advantages .specification-shop {
@@ -519,7 +540,6 @@ a {
   margin-bottom: 9px;
   padding-left: 20px;
   padding-top: 40px;
-  /*По макету 60px (margit-top: 0), но визуально 60 слишком много. чему верить?*/
 }
 
 .excellence {
@@ -536,7 +556,6 @@ a {
   position: relative;
   display: inline-block;
   box-sizing: border-box;
-  /*как отредактировать расстояния по макету? 50% или 48.9? если 48.9, то как раздвинуть столбцы?*/
 }
 
 .about-us-ice-cream {
@@ -559,9 +578,6 @@ a {
   margin-left: -20px;
 }
 
-
-/*не уверена, что правильно задан margin. расстояние от края до иконки д.б.20px*/
-
 .blog-newsletter {
   display: flex;
   justify-content: space-between;
@@ -569,8 +585,6 @@ a {
 
 .blog {
   width: 48.8%;
-  background-image: url(../img/strawberry-background.jpg);
-  background-color: #ffffff;
   font-size: 16px;
   line-height: 22px;
   border-radius: 15px;
@@ -578,40 +592,44 @@ a {
   border-style: solid;
   padding-left: 20px;
   box-sizing: border-box;
+  background-image: url(../img/strawberry-background.jpg);
+  background-color: #ffffff;
 }
 
 .blog a {
-  color: #323232;
-  background-color: #ffffff;
   font-size: 24px;
   line-height: 30px;
   text-decoration: underline;
+  color: #323232;
+  background-color: #ffffff;
 }
 
 .newsletter {
   width: 48.8%;
   height: 200px;
-  background-color: #f8f7f4;
   border-radius: 15px;
-  color: #5a5a5a;
   background-image: url(https://htmlacademy-htmlcss.github.io/924839-gllacy/5/img/bg-post.svg);
+  color: #5a5a5a;
+  background-color: #f8f7f4;
 }
 
 .newsletter>.mail-form {
   margin: 6px;
   padding: 10px 10px 50px 20px;
-  background-color: #f8f7f4;
   border-radius: 15px;
+  background-color: #f8f7f4;
 }
 
 .map {
+  position: relative;
   margin: 0;
   min-width: 1200px;
   margin-left: -10px;
-  position: relative;
 }
 
 .container-address {
+  max-width: 300px;
+  min-height: 300px;
   display: flex;
   justify-content: flex-end;
   position: absolute;
@@ -619,15 +637,13 @@ a {
   top: 62px;
   border-radius: 14px;
   background-color: #fefefe;
-  max-width: 300px;
-  min-height: 300px;
 }
 
 .store-address {
-  color: #323232;
-  padding: 25px;
   display: flex;
   flex-direction: column;
+  padding: 25px;
+  color: #323232;
 }
 
 .store-address .address-small {
@@ -645,27 +661,27 @@ a {
 }
 
 .feedback-form {
-  background-color: #ec583c;
-  color: #ffffff;
   padding: 13px 30px;
   border-radius: 25px;
+  color: #ffffff;
+  background-color: #ec583c;
 }
 
 .store-address a {
+  position: absolute;
+  bottom: 30px;
+  border-radius: 20px;
   color: #fefefe;
   background-color: #ef5f3f;
-  border-radius: 20px;
-  bottom: 30px;
-  position: absolute;
 }
 
 .item-cards-table {
   display: inline-flex;
   flex-wrap: wrap;
+  text-align: center;
   /*padding-left: 2%;
 padding-right: 2%;*/
   padding: 0;
-  text-align: center;
 }
 
 .icecream-card {
@@ -691,14 +707,27 @@ padding-right: 2%;*/
   margin: 0;
 }
 
+.img-wrap::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 10px;
+  background-image: url(../img/sprite.png);
+  background-position: -10px 528px;
+  width: 62px;
+  height: 62px;
+  z-index: 10;
+}
+
 .button-preview {
-  background-color: #f16642;
-  border-radius: 30px;
-  padding: 13px;
-  color: #fefefe;
   position: relative;
   top: 20px;
+  padding: 13px;
   visibility: hidden;
+  border-radius: 30px;
+  color: #fefefe;
+  background-color: #f16642;
 }
 
 .icecream-card:hover .button-preview {
@@ -708,8 +737,8 @@ padding-right: 2%;*/
 
 .card-name {
   display: flex;
-  text-decoration: underline;
   position: relative;
+  text-decoration: underline;
   text-align: center;
   margin-top: -40px;
 }
@@ -736,6 +765,73 @@ padding-right: 2%;*/
 
 .filter-form-fillers {
   list-style-type: none;
+}
+
+.paginator {
+  margin: 20px 9px 47px 945px;
+  padding-left: 30px;
+  padding-right: 16px;
+  padding-top: 21px;
+  position: relative;
+}
+
+.disabled,
+.disabled::before {
+  border-color: rgba(255, 255, 255, 0.2);
+}
+
+.page {
+  border-radius: 50%;
+  color: #fff;
+  display: inline-block;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 18px;
+  padding: 4px 8px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: top;
+}
+
+.next-page,
+.previous-page {
+  border-bottom: 2px solid #fff;
+  border-left: 2px solid #fff;
+  height: 9px;
+  position: absolute;
+  top: 30px;
+  width: 9px;
+}
+
+.previous-page {
+  left: 9px;
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.current-page,
+.page .current-page:hover {
+  background-color: #fff;
+}
+
+.paginator .current-page,
+.page:active {
+  color: #323232;
+}
+
+.next-page {
+  right: 14px;
+  -webkit-transform: rotate(-135deg);
+  transform: rotate(-135deg);
+}
+
+.page:hover {
+  background-color: rgba(255, 255, 255, 0.2)
+}
+
+.page:active {
+  background-color: #ffffff;
 }
 
 .main-footer {
@@ -848,15 +944,6 @@ padding-right: 2%;*/
   border-radius: 20px;
 }
 
-
-/*.button { это не нужно в принципе?
-font:inherit;
-text-align:center;
-vertical-align:middle;
-color:#fefefe;
-border-radius: 20px;
-}*/
-
 .catalog-dropdown-items,
 .basket-form,
 .contact-form,
@@ -864,6 +951,10 @@ border-radius: 20px;
 .login-form {
   visibility: hidden;
   z-index: 100;
+}
+
+.contact-form {
+  display: none
 }
 
 .catalog-dropdown,
@@ -877,16 +968,66 @@ border-radius: 20px;
 .login-form,
 .search-form,
 .basket-form {
+  position: absolute;
   margin: 0;
   margin-bottom: 20px;
   padding: 0;
-  background-color: #ffffff;
   border-radius: 4px;
-  position: absolute;
+  background-color: #ffffff;
 }
 
-.contact-form {
-  display: none
+.login-form {
+  display: inline-block;
+  position: absolute;
+  padding: 18px 20px;
+  font-size: 0;
+  background-color: #f8f7f4;
+  border-radius: 4px;
+  box-shadow: 0 20px 20px 0 rgba(0, 0, 0, .4);
+  cursor: default;
+}
+
+.login-dropdown-popup-wrap {
+  position: absolute;
+  top: 100%;
+  right: 0%;
+}
+
+.login-form-link {
+  display: flex;
+  flex-direction: column;
+  color: #323232;
+  font-size: 13px;
+  line-height: 21px;
+  font-weight: 400;
+}
+
+
+/*уточнить все кнопки и ссылки*/
+
+button {
+  display: inline-block;
+  vertical-align: top;
+  padding: 8px 23px 12px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 24px;
+  text-align: center;
+  text-shadow: 0 2px 5px rgba(160, 32, 11, .76);
+  background-color: #f26843;
+  box-shadow: 0 2px 2px rgba(172, 16, 0, .64);
+  color: #fff;
+  border: none;
+  border-radius: 22px;
+  cursor: pointer;
+  outline: none;
+}
+
+.form-user-container {
+  color: #999;
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: 400;
 }
 
 .catalog-dropdown-wrapper {
@@ -897,8 +1038,24 @@ border-radius: 20px;
   visibility: visible;
 }
 
+.user-navigation-item {
+  position: relative;
+  top: 100%;
+  right: 0%;
+}
+
 .search-dropdown:hover .search-form {
   visibility: visible;
+  margin: 0;
+}
+
+.search-form {
+  position: absolute;
+  padding: 20px 15px;
+  background-color: #f8f7f4;
+  border-radius: 5px;
+  box-shadow: 0 20px 20px 0 rgba(0, 0, 0, .4);
+  cursor: default;
 }
 
 .login-dropdown:hover .login-form {
@@ -930,9 +1087,9 @@ border-radius: 20px;
   line-height: 16px;
   font-weight: 400;
   text-decoration: none;
-  color: #000000;
-  cursor: pointer;
   white-space: nowrap;
+  cursor: pointer;
+  color: #000000;
 }
 
 .catalog-categories:first-child a {
