--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,18 @@ a {
   background-color: #ffffff;
 }
 
+#product-1:checked~.site-wrapper .icecream-card:hover {
+  background-color: #9bafa3;
+}
+
+#product-2:checked~.site-wrapper .icecream-card:hover {
+  background-color: #adb6c1;
+}
+
+#product-3:checked~.site-wrapper .icecream-card:hover {
+  background-color: #bbaea9;
+}
+
 .main-navigation {
   display: flex;
   flex-wrap: wrap;
@@ -615,9 +627,20 @@ a {
 
 .newsletter>.mail-form {
   margin: 6px;
-  padding: 10px 10px 50px 20px;
+  padding: 10px 10px 30px 20px;
   border-radius: 15px;
   background-color: #f8f7f4;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+#user-mail {
+  flex: 2;
+  margin-right: 10px;
+}
+
+.mail-form button {
+  margin-right: 14px;
 }
 
 .map {
@@ -1120,4 +1143,13 @@ input[type="radio"].visually-hidden {
 #product-2,
 #product-3 {
   display: none;
+}
+
+input[type="text"],
+input[type="password"] {
+  border-radius: 4px;
+  border: 1px solid #d3d3d2;
+  padding: 3px 15px;
+  font-size: 14px;
+  line-height: 24px;
 }
